re-run notebooks

--- a/notebooks/library_size.ipynb
+++ b/notebooks/library_size.ipynb
@@ -17,15 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-11-13T17:44:06.389848Z",
-     "iopub.status.busy": "2022-11-13T17:44:06.389171Z",
-     "iopub.status.idle": "2022-11-13T17:44:07.823421Z",
-     "shell.execute_reply": "2022-11-13T17:44:07.822633Z",
-     "shell.execute_reply.started": "2022-11-13T17:44:06.389695Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -47,15 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-11-13T17:44:07.825020Z",
-     "iopub.status.busy": "2022-11-13T17:44:07.824719Z",
-     "iopub.status.idle": "2022-11-13T17:44:08.641518Z",
-     "shell.execute_reply": "2022-11-13T17:44:08.640777Z",
-     "shell.execute_reply.started": "2022-11-13T17:44:07.824997Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -247,26 +231,18 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-11-13T17:44:08.642834Z",
-     "iopub.status.busy": "2022-11-13T17:44:08.642542Z",
-     "iopub.status.idle": "2022-11-13T17:52:24.592040Z",
-     "shell.execute_reply": "2022-11-13T17:52:24.590534Z",
-     "shell.execute_reply.started": "2022-11-13T17:44:08.642813Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model with 1000 variants fit and saved.\n",
-      "Model with 2500 variants fit and saved.\n",
-      "Model with 5000 variants fit and saved.\n",
-      "Model with 10000 variants fit and saved.\n",
-      "Model with 20000 variants fit and saved.\n",
-      "Model with 30000 variants fit and saved.\n"
+      "Model with 1000 variants was already fit.\n",
+      "Model with 2500 variants was already fit.\n",
+      "Model with 5000 variants was already fit.\n",
+      "Model with 10000 variants was already fit.\n",
+      "Model with 20000 variants was already fit.\n",
+      "Model with 30000 variants was already fit.\n"
      ]
     }
    ],
@@ -342,15 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-11-13T17:52:24.596121Z",
-     "iopub.status.busy": "2022-11-13T17:52:24.595743Z",
-     "iopub.status.idle": "2022-11-13T17:52:24.938535Z",
-     "shell.execute_reply": "2022-11-13T17:52:24.937754Z",
-     "shell.execute_reply.started": "2022-11-13T17:52:24.596084Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "all_corrs = pd.DataFrame({\"epitope\": [], \"correlation (R^2)\": [], \"num_variants\": []})\n",
@@ -383,21 +351,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-11-13T17:52:24.940327Z",
-     "iopub.status.busy": "2022-11-13T17:52:24.939928Z",
-     "iopub.status.idle": "2022-11-13T17:52:25.013936Z",
-     "shell.execute_reply": "2022-11-13T17:52:25.013406Z",
-     "shell.execute_reply.started": "2022-11-13T17:52:24.940281Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/fh/fast/bloom_j/software/miniconda3/envs/BloomLab/lib/python3.8/site-packages/altair/utils/core.py:317: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
+      "/home/tyu2/.local/lib/python3.8/site-packages/altair/utils/core.py:317: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
       "  for col_name, dtype in df.dtypes.iteritems():\n"
      ]
     },
@@ -405,13 +365,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-24d60e83768a4ca2ad5c2a6340c3bc0a\"></div>\n",
+       "<div id=\"altair-viz-c0732300e6ec4777b841b2361c7719d0\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-24d60e83768a4ca2ad5c2a6340c3bc0a\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-24d60e83768a4ca2ad5c2a6340c3bc0a\");\n",
+       "    if (outputDiv.id !== \"altair-viz-c0732300e6ec4777b841b2361c7719d0\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-c0732300e6ec4777b841b2361c7719d0\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -457,7 +417,7 @@
        "        .catch(showError)\n",
        "        .then(() => displayChart(vegaEmbed));\n",
        "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"layer\": [{\"mark\": \"point\", \"encoding\": {\"color\": {\"field\": \"epitope\", \"scale\": {\"range\": [\"#0072B2\", \"#009E73\", \"#CC79A7\"]}, \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}, {\"field\": \"epitope\", \"type\": \"nominal\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}}, {\"mark\": {\"type\": \"line\", \"size\": 2.5}, \"encoding\": {\"color\": {\"field\": \"epitope\", \"scale\": {\"range\": [\"#0072B2\", \"#009E73\", \"#CC79A7\"]}, \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}, {\"field\": \"epitope\", \"type\": \"nominal\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}, \"title\": \"inferred vs. true mutation escape values\", \"transform\": [{\"loess\": \"correlation (R^2)\", \"on\": \"num_variants\", \"groupby\": [\"epitope\"]}]}], \"data\": {\"name\": \"data-302931dbfc15b78b145e77cbbdc5ceea\"}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.2.0.json\", \"datasets\": {\"data-302931dbfc15b78b145e77cbbdc5ceea\": [{\"epitope\": \"class 1\", \"correlation (R^2)\": 0.006849654126063373, \"num_variants\": \"1000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.23201043272995334, \"num_variants\": \"1000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.034144761673969494, \"num_variants\": \"1000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.00809496737540629, \"num_variants\": \"2500\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.6304033813420997, \"num_variants\": \"2500\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.20346563328212267, \"num_variants\": \"2500\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.047685753427567534, \"num_variants\": \"5000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.8032743972691582, \"num_variants\": \"5000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.7528270412172067, \"num_variants\": \"5000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.19599952757979885, \"num_variants\": \"10000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.8305267779820112, \"num_variants\": \"10000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.8474876983956084, \"num_variants\": \"10000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.6388955191349077, \"num_variants\": \"20000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9535913587967041, \"num_variants\": \"20000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.9249641307375916, \"num_variants\": \"20000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.6829929555711579, \"num_variants\": \"30000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9665404039235228, \"num_variants\": \"30000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.9381605904531648, \"num_variants\": \"30000\"}]}}, {\"mode\": \"vega-lite\"});\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"layer\": [{\"mark\": \"point\", \"encoding\": {\"color\": {\"field\": \"epitope\", \"scale\": {\"range\": [\"#0072B2\", \"#CC79A7\", \"#4C3549\"]}, \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}, {\"field\": \"epitope\", \"type\": \"nominal\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}}, {\"mark\": {\"type\": \"line\", \"size\": 2.5}, \"encoding\": {\"color\": {\"field\": \"epitope\", \"scale\": {\"range\": [\"#0072B2\", \"#CC79A7\", \"#4C3549\"]}, \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}, {\"field\": \"epitope\", \"type\": \"nominal\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}, \"title\": \"inferred vs. true mutation escape values\", \"transform\": [{\"loess\": \"correlation (R^2)\", \"on\": \"num_variants\", \"groupby\": [\"epitope\"]}]}], \"data\": {\"name\": \"data-302931dbfc15b78b145e77cbbdc5ceea\"}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.2.0.json\", \"datasets\": {\"data-302931dbfc15b78b145e77cbbdc5ceea\": [{\"epitope\": \"class 1\", \"correlation (R^2)\": 0.006849654126063373, \"num_variants\": \"1000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.23201043272995334, \"num_variants\": \"1000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.034144761673969494, \"num_variants\": \"1000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.00809496737540629, \"num_variants\": \"2500\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.6304033813420997, \"num_variants\": \"2500\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.20346563328212267, \"num_variants\": \"2500\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.047685753427567534, \"num_variants\": \"5000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.8032743972691582, \"num_variants\": \"5000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.7528270412172067, \"num_variants\": \"5000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.19599952757979885, \"num_variants\": \"10000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.8305267779820112, \"num_variants\": \"10000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.8474876983956084, \"num_variants\": \"10000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.6388955191349077, \"num_variants\": \"20000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9535913587967041, \"num_variants\": \"20000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.9249641307375916, \"num_variants\": \"20000\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.6829929555711579, \"num_variants\": \"30000\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9665404039235228, \"num_variants\": \"30000\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.9381605904531648, \"num_variants\": \"30000\"}]}}, {\"mode\": \"vega-lite\"});\n",
        "</script>"
       ],
       "text/plain": [
@@ -478,7 +438,7 @@
     "        alt.X(\"num_variants:Q\"),\n",
     "        alt.Y(\"correlation (R^2):Q\"),\n",
     "        alt.Color(\n",
-    "            \"epitope:N\", scale=alt.Scale(range=[\"#0072B2\", \"#009E73\", \"#CC79A7\"])\n",
+    "            \"epitope:N\", scale=alt.Scale(range=[\"#0072B2\", \"#CC79A7\", \"#4C3549\"])\n",
     "        ),\n",
     "        tooltip=[\n",
     "            \"num_variants\",\n",
@@ -502,15 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-11-13T17:52:25.015103Z",
-     "iopub.status.busy": "2022-11-13T17:52:25.014866Z",
-     "iopub.status.idle": "2022-11-13T17:52:25.736869Z",
-     "shell.execute_reply": "2022-11-13T17:52:25.735741Z",
-     "shell.execute_reply.started": "2022-11-13T17:52:25.015085Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "exact_data = (\n",
@@ -531,15 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-11-13T17:52:25.738678Z",
-     "iopub.status.busy": "2022-11-13T17:52:25.738289Z",
-     "iopub.status.idle": "2022-11-13T17:52:59.916213Z",
-     "shell.execute_reply": "2022-11-13T17:52:59.915542Z",
-     "shell.execute_reply.started": "2022-11-13T17:52:25.738635Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ic90_corrs = pd.DataFrame({\"correlation (R^2)\": [], \"num_variants\": []})\n",
@@ -574,21 +518,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-11-13T17:52:59.917716Z",
-     "iopub.status.busy": "2022-11-13T17:52:59.917106Z",
-     "iopub.status.idle": "2022-11-13T17:52:59.971011Z",
-     "shell.execute_reply": "2022-11-13T17:52:59.970244Z",
-     "shell.execute_reply.started": "2022-11-13T17:52:59.917694Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/fh/fast/bloom_j/software/miniconda3/envs/BloomLab/lib/python3.8/site-packages/altair/utils/core.py:317: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
+      "/home/tyu2/.local/lib/python3.8/site-packages/altair/utils/core.py:317: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
       "  for col_name, dtype in df.dtypes.iteritems():\n"
      ]
     },
@@ -596,13 +532,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-d99e9306370146ecabebac3deeda2ff2\"></div>\n",
+       "<div id=\"altair-viz-fd390b5e15f1471ea70490d0e13b8d22\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-d99e9306370146ecabebac3deeda2ff2\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-d99e9306370146ecabebac3deeda2ff2\");\n",
+       "    if (outputDiv.id !== \"altair-viz-fd390b5e15f1471ea70490d0e13b8d22\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-fd390b5e15f1471ea70490d0e13b8d22\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -648,7 +584,7 @@
        "        .catch(showError)\n",
        "        .then(() => displayChart(vegaEmbed));\n",
        "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"layer\": [{\"mark\": \"point\", \"encoding\": {\"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}}, {\"mark\": {\"type\": \"line\", \"size\": 2.5}, \"encoding\": {\"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}, \"title\": \"predicted vs. true IC90\", \"transform\": [{\"loess\": \"correlation (R^2)\", \"on\": \"num_variants\"}]}], \"data\": {\"name\": \"data-8f838ae742a5aa85e4371d6f308c9959\"}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.2.0.json\", \"datasets\": {\"data-8f838ae742a5aa85e4371d6f308c9959\": [{\"correlation (R^2)\": 0.35753789663430346, \"num_variants\": \"1000\"}, {\"correlation (R^2)\": 0.5206417802103899, \"num_variants\": \"2500\"}, {\"correlation (R^2)\": 0.7602914318434003, \"num_variants\": \"5000\"}, {\"correlation (R^2)\": 0.84271651974537, \"num_variants\": \"10000\"}, {\"correlation (R^2)\": 0.9443706178522414, \"num_variants\": \"20000\"}, {\"correlation (R^2)\": 0.9589249139491882, \"num_variants\": \"30000\"}]}}, {\"mode\": \"vega-lite\"});\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"layer\": [{\"mark\": \"point\", \"encoding\": {\"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}}, {\"mark\": {\"type\": \"line\", \"size\": 2.5}, \"encoding\": {\"tooltip\": [{\"field\": \"num_variants\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}], \"x\": {\"field\": \"num_variants\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}, \"title\": \"predicted vs. true IC90\", \"transform\": [{\"loess\": \"correlation (R^2)\", \"on\": \"num_variants\"}]}], \"data\": {\"name\": \"data-d0eea837878f8666b1b0ca134a916442\"}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.2.0.json\", \"datasets\": {\"data-d0eea837878f8666b1b0ca134a916442\": [{\"correlation (R^2)\": 0.35753789663430346, \"num_variants\": \"1000\"}, {\"correlation (R^2)\": 0.5206417802103898, \"num_variants\": \"2500\"}, {\"correlation (R^2)\": 0.7602914318434003, \"num_variants\": \"5000\"}, {\"correlation (R^2)\": 0.8427165197453695, \"num_variants\": \"10000\"}, {\"correlation (R^2)\": 0.9443706178522414, \"num_variants\": \"20000\"}, {\"correlation (R^2)\": 0.9589249139491882, \"num_variants\": \"30000\"}]}}, {\"mode\": \"vega-lite\"});\n",
        "</script>"
       ],
       "text/plain": [
