--- a/mutation_rate.ipynb
+++ b/mutation_rate.ipynb
@@ -17,15 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-11-13T17:43:48.893968Z",
-     "iopub.status.busy": "2022-11-13T17:43:48.893393Z",
-     "iopub.status.idle": "2022-11-13T17:43:50.264173Z",
-     "shell.execute_reply": "2022-11-13T17:43:50.263627Z",
-     "shell.execute_reply.started": "2022-11-13T17:43:48.893856Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -47,15 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-11-13T17:43:50.265570Z",
-     "iopub.status.busy": "2022-11-13T17:43:50.265388Z",
-     "iopub.status.idle": "2022-11-13T17:43:51.201354Z",
-     "shell.execute_reply": "2022-11-13T17:43:51.200905Z",
-     "shell.execute_reply.started": "2022-11-13T17:43:50.265548Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -274,24 +258,16 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-11-13T17:43:51.202379Z",
-     "iopub.status.busy": "2022-11-13T17:43:51.202218Z",
-     "iopub.status.idle": "2022-11-13T18:02:33.083931Z",
-     "shell.execute_reply": "2022-11-13T18:02:33.082422Z",
-     "shell.execute_reply.started": "2022-11-13T17:43:51.202360Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model on data with 1 average mutations fit and saved.\n",
-      "Model on data with 2 average mutations fit and saved.\n",
-      "Model on data with 3 average mutations fit and saved.\n",
-      "Model on data with 4 average mutations fit and saved.\n"
+      "Model on data with 1 average mutations was already fit.\n",
+      "Model on data with 2 average mutations was already fit.\n",
+      "Model on data with 3 average mutations was already fit.\n",
+      "Model on data with 4 average mutations was already fit.\n"
      ]
     }
    ],
@@ -363,15 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-11-13T18:02:33.087764Z",
-     "iopub.status.busy": "2022-11-13T18:02:33.087425Z",
-     "iopub.status.idle": "2022-11-13T18:02:33.293323Z",
-     "shell.execute_reply": "2022-11-13T18:02:33.292713Z",
-     "shell.execute_reply.started": "2022-11-13T18:02:33.087723Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "all_corrs = pd.DataFrame({\"epitope\": [], \"correlation (R^2)\": [], \"mutation_rate\": []})\n",
@@ -404,21 +372,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-11-13T18:02:33.294387Z",
-     "iopub.status.busy": "2022-11-13T18:02:33.294132Z",
-     "iopub.status.idle": "2022-11-13T18:02:33.370757Z",
-     "shell.execute_reply": "2022-11-13T18:02:33.370204Z",
-     "shell.execute_reply.started": "2022-11-13T18:02:33.294366Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/fh/fast/bloom_j/software/miniconda3/envs/BloomLab/lib/python3.8/site-packages/altair/utils/core.py:317: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
+      "/home/tyu2/.local/lib/python3.8/site-packages/altair/utils/core.py:317: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
       "  for col_name, dtype in df.dtypes.iteritems():\n"
      ]
     },
@@ -426,13 +386,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-a64cf921b391453b86389297a1ca83cd\"></div>\n",
+       "<div id=\"altair-viz-1884470e33d0464ea9b2f1ce6f2c1705\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-a64cf921b391453b86389297a1ca83cd\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-a64cf921b391453b86389297a1ca83cd\");\n",
+       "    if (outputDiv.id !== \"altair-viz-1884470e33d0464ea9b2f1ce6f2c1705\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-1884470e33d0464ea9b2f1ce6f2c1705\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -478,7 +438,7 @@
        "        .catch(showError)\n",
        "        .then(() => displayChart(vegaEmbed));\n",
        "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-de905217ad89b0069b8d4b449d1f9d4c\"}, \"mark\": {\"type\": \"circle\", \"size\": 125}, \"encoding\": {\"color\": {\"field\": \"epitope\", \"legend\": null, \"scale\": {\"range\": [\"#0072B2\", \"#009E73\", \"#CC79A7\"]}, \"type\": \"nominal\"}, \"column\": {\"field\": \"epitope\", \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"mutation_rate\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}], \"x\": {\"field\": \"mutation_rate\", \"sort\": {\"field\": \"x\", \"order\": \"descending\"}, \"type\": \"ordinal\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}, \"height\": 200, \"title\": \"inferred vs. true mutation escape values\", \"width\": 200, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.2.0.json\", \"datasets\": {\"data-de905217ad89b0069b8d4b449d1f9d4c\": [{\"epitope\": \"class 1\", \"correlation (R^2)\": 0.00010802708532396839, \"mutation_rate\": \"avg1muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.7070381444096622, \"mutation_rate\": \"avg1muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.11539521378609083, \"mutation_rate\": \"avg1muts\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.6070700190444476, \"mutation_rate\": \"avg2muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9481244054347577, \"mutation_rate\": \"avg2muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.9180433681758694, \"mutation_rate\": \"avg2muts\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.6903693412396601, \"mutation_rate\": \"avg3muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.973458806521, \"mutation_rate\": \"avg3muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.9496508848872558, \"mutation_rate\": \"avg3muts\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.7964770897971977, \"mutation_rate\": \"avg4muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9703951860765229, \"mutation_rate\": \"avg4muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.9624320506470506, \"mutation_rate\": \"avg4muts\"}]}}, {\"mode\": \"vega-lite\"});\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-de905217ad89b0069b8d4b449d1f9d4c\"}, \"mark\": {\"type\": \"circle\", \"size\": 125}, \"encoding\": {\"color\": {\"field\": \"epitope\", \"legend\": null, \"scale\": {\"range\": [\"#0072B2\", \"#CC79A7\", \"#4C3549\"]}, \"type\": \"nominal\"}, \"column\": {\"field\": \"epitope\", \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"mutation_rate\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}], \"x\": {\"field\": \"mutation_rate\", \"sort\": {\"field\": \"x\", \"order\": \"descending\"}, \"type\": \"ordinal\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}, \"height\": 200, \"title\": \"inferred vs. true mutation escape values\", \"width\": 200, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.2.0.json\", \"datasets\": {\"data-de905217ad89b0069b8d4b449d1f9d4c\": [{\"epitope\": \"class 1\", \"correlation (R^2)\": 0.00010802708532396839, \"mutation_rate\": \"avg1muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.7070381444096622, \"mutation_rate\": \"avg1muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.11539521378609083, \"mutation_rate\": \"avg1muts\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.6070700190444476, \"mutation_rate\": \"avg2muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9481244054347577, \"mutation_rate\": \"avg2muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.9180433681758694, \"mutation_rate\": \"avg2muts\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.6903693412396601, \"mutation_rate\": \"avg3muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.973458806521, \"mutation_rate\": \"avg3muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.9496508848872558, \"mutation_rate\": \"avg3muts\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.7964770897971977, \"mutation_rate\": \"avg4muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9703951860765229, \"mutation_rate\": \"avg4muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.9624320506470506, \"mutation_rate\": \"avg4muts\"}]}}, {\"mode\": \"vega-lite\"});\n",
        "</script>"
       ],
       "text/plain": [
@@ -498,7 +458,7 @@
     "    column=\"epitope:N\",\n",
     "    tooltip=[\"mutation_rate\", alt.Tooltip(\"correlation (R^2)\", format=\".3f\")],\n",
     "    color=alt.Color(\n",
-    "        \"epitope\", scale=alt.Scale(range=[\"#0072B2\", \"#009E73\", \"#CC79A7\"]), legend=None\n",
+    "        \"epitope\", scale=alt.Scale(range=[\"#0072B2\", \"#CC79A7\", \"#4C3549\"]), legend=None\n",
     "    ),\n",
     ").properties(width=200, height=200, title=\"inferred vs. true mutation escape values\")"
    ]
@@ -516,13 +476,6 @@
    "source": [
     "An average of at least 2 mutations per gene is needed to infer the true mutation-escape values for all epitopes. When there is an average of 1 mutation per gene, the correlation is highest for the most immunodominant epitope 2 and lowest for the most subdominant epitope 1. This is expected, as we should not observe escape for variants with a single mutation in a subdominant epitope."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
