upgrade `altair` to commit f8912bad75d4247ab726b639968b13315161660a
New version of `altair` still not complete, so taking latest master branch from repo.

--- a/notebooks/partition_function.ipynb
+++ b/notebooks/partition_function.ipynb
@@ -350,7 +350,7 @@
     "        ),\n",
     "    ),\n",
     "    tooltip=[\"assumption:O\", \"p_unbound:O\"],\n",
-    ").add_parameter(f_1_filter, k_d_2_filter, k_d_1_filter, c_filter).transform_filter(\n",
+    ").add_params(f_1_filter, k_d_2_filter, k_d_1_filter, c_filter).transform_filter(\n",
     "    f_1_filter\n",
     ").transform_filter(\n",
     "    k_d_2_filter\n",
@@ -536,7 +536,7 @@
     "        ),\n",
     "    ),\n",
     "    tooltip=[\"assumption:O\", \"p_unbound:O\"],\n",
-    ").add_parameter(\n",
+    ").add_params(\n",
     "    f_2_filter, f_1_filter, k_d_3_filter, k_d_2_filter, k_d_1_filter, c_filter\n",
     ").transform_filter(\n",
     "    f_2_filter\n",
