--- a/notebooks/RBD_bootstrap.ipynb
+++ b/notebooks/RBD_bootstrap.ipynb
@@ -728,7 +728,9 @@
    ],
    "source": [
     "# NBVAL_IGNORE_OUTPUT\n",
-    "bootstrap_poly.mut_escape_plot(addtl_slider_stats={\"times_seen\": 2}, per_model_tooltip=False)"
+    "bootstrap_poly.mut_escape_plot(\n",
+    "    addtl_slider_stats={\"times_seen\": 2}, per_model_tooltip=False\n",
+    ")"
    ]
   },
   {
