--- a/notebooks/real_LyCoV1404.ipynb
+++ b/notebooks/real_LyCoV1404.ipynb
@@ -768,16 +768,12 @@
     }
    ],
    "source": [
-    "muteffects = (\n",
-    "    pd.read_csv(\"Omicron_BA.1_muteffects_observed.csv\")\n",
-    "    .rename(\n",
-    "        columns={\n",
-    "            \"sequential_site\": \"site\",\n",
-    "            \"effect\": \"functional effect\",\n",
-    "        },\n",
-    "    )\n",
-    "    [[\"site\", \"reference_site\", \"mutant\", \"functional effect\"]]\n",
-    ")\n",
+    "muteffects = pd.read_csv(\"Omicron_BA.1_muteffects_observed.csv\").rename(\n",
+    "    columns={\n",
+    "        \"sequential_site\": \"site\",\n",
+    "        \"effect\": \"functional effect\",\n",
+    "    },\n",
+    ")[[\"site\", \"reference_site\", \"mutant\", \"functional effect\"]]\n",
     "\n",
     "muteffects.head()"
    ]
