--- a/specify_epitopes.ipynb
+++ b/specify_epitopes.ipynb
@@ -463,7 +463,6 @@
     "            model.mut_escape_df[\"epitope\"].unique(),\n",
     "        )\n",
     "    ):\n",
-    "\n",
     "        df = true_mut_escape_df.query(f'epitope == \"{true_e}\"').merge(\n",
     "            (\n",
     "                model.mut_escape_df.rename(\n",
@@ -575,7 +574,10 @@
     }
    ],
    "source": [
-    "alt.Chart(plot_data).mark_rect(opacity=0.95, stroke=\"black\",).encode(\n",
+    "alt.Chart(plot_data).mark_rect(\n",
+    "    opacity=0.95,\n",
+    "    stroke=\"black\",\n",
+    ").encode(\n",
     "    x=\"Fit epitope class:O\",\n",
     "    y=\"True epitope class:O\",\n",
     "    color=alt.Color(\"Correlation (R^2):Q\", scale=alt.Scale(scheme=\"viridis\")),\n",
@@ -584,7 +586,10 @@
     "        \"True epitope class:O\",\n",
     "        alt.Tooltip(\"Correlation (R^2)\", format=\".3f\"),\n",
     "    ],\n",
-    ").properties(width=130, height=100,).facet(\n",
+    ").properties(\n",
+    "    width=130,\n",
+    "    height=100,\n",
+    ").facet(\n",
     "    \"Number of fit epitopes\",\n",
     ")"
    ]
@@ -1216,7 +1221,6 @@
     "            model.mut_escape_df[\"epitope\"].unique(),\n",
     "        )\n",
     "    ):\n",
-    "\n",
     "        df = true_mut_escape_df.query(f'epitope == \"{true_e}\"').merge(\n",
     "            (\n",
     "                model.mut_escape_df.rename(\n",
@@ -1328,7 +1332,10 @@
     }
    ],
    "source": [
-    "alt.Chart(plot_data).mark_rect(opacity=0.95, stroke=\"black\",).encode(\n",
+    "alt.Chart(plot_data).mark_rect(\n",
+    "    opacity=0.95,\n",
+    "    stroke=\"black\",\n",
+    ").encode(\n",
     "    x=\"Fit epitope class:O\",\n",
     "    y=\"True epitope class:O\",\n",
     "    color=alt.Color(\"Correlation (R^2):Q\", scale=alt.Scale(scheme=\"viridis\")),\n",
@@ -1337,7 +1344,10 @@
     "        \"True epitope class:O\",\n",
     "        alt.Tooltip(\"Correlation (R^2)\", format=\".3f\"),\n",
     "    ],\n",
-    ").properties(width=130, height=100,).facet(\n",
+    ").properties(\n",
+    "    width=130,\n",
+    "    height=100,\n",
+    ").facet(\n",
     "    \"Epitope seeding\",\n",
     "    columns=2,\n",
     ")"
