update citation to published Yu et al (2022) version
Previously the citation was the bioRxiv pre-print, now cite the final Virus Evolution paper.

--- a/notebooks/biophysical_model.ipynb
+++ b/notebooks/biophysical_model.ipynb
@@ -7,7 +7,7 @@
     "# Biophysical model\n",
     "Here we describe the biophysical model of polyclonal antibodies that motivates the approach in this package.\n",
     "\n",
-    "We recommend first reading [this paper](https://www.biorxiv.org/content/10.1101/2022.09.17.508366v1) to understand the model conceptually before reading the rest of the documentation.\n",
+    "We recommend first reading [this paper](https://doi.org/10.1093/ve/veac110) to understand the model conceptually before reading the rest of the documentation.\n",
     "\n",
     "## Model\n",
     "\n",
@@ -88,7 +88,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
