--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -159,6 +159,16 @@
     "p_v\\left(c\\right) \\left[1 - U_e\\left(v, c\\right)\\right]\n",
     "$$\n",
     "\n",
+    "$$\n",
+    "\\frac{\\partial L}{\\partial n_e} =\n",
+    "?\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial L}{\\partial t_e} =\n",
+    "?\n",
+    "$$\n",
+    "\n",
     "See below for how the sub-components that lead to these were calculated."
    ]
   },
@@ -193,7 +203,10 @@
     "\n",
     "Next, note\n",
     "$$\n",
-    "\\frac{\\partial U_e\\left(v, c\\right)}{\\partial \\beta_{m,e}} = \\frac{\\partial \\phi_e\\left(v\\right)}{\\partial \\beta_{m,e}}\\frac{c \\exp\\left(-\\phi_e\\left(v\\right)\\right) }{\\left[1 + c \\exp\\left(-\\phi_e\\left(v\\right)\\right)\\right]^2} = \\frac{\\partial \\phi_e\\left(v\\right)}{\\partial \\beta_{m,e}} U_e\\left(v, c\\right) \\left[1 - U_e\\left(v, c\\right)\\right]\n",
+    "\\frac{\\partial U_e\\left(v, c\\right)}{\\partial \\beta_{m,e}} = \\frac{\\partial \\phi_e\\left(v\\right)}{\\partial \\beta_{m,e}}\n",
+    "\\frac{n \\left(1 - t_e\\right) \\left[c \\exp\\left(-\\phi_e\\left(v\\right)\\right)\\right]^{n_e}}{\\left[1 + \\left[c \\exp\\left(-\\phi_e\\left(v\\right)\\right)\\right]^{n_e}\\right]^2}\n",
+    "=\n",
+    "\\frac{\\partial \\phi_e\\left(v\\right)}{\\partial \\beta_{m,e}} \\frac{n_e}{1 - t_e}\\left[U_e\\left(v, c\\right) - t_e\\right] \\left[1 - U_e\\left(v, c\\right)\\right]\n",
     "$$\n",
     "where the last step uses the simplification [here](https://math.stackexchange.com/a/1225116).\n",
     "\n",
@@ -202,7 +215,8 @@
     "\n",
     "Putting it all together, we have:\n",
     "$$\n",
-    "\\frac{\\partial p_v\\left(c\\right)}{\\partial \\beta_{m,e}} = p_v\\left(c\\right) \\left[1 - U_e\\left(v, c\\right)\\right] b\\left(v\\right)_m.\n",
+    "\\frac{\\partial p_v\\left(c\\right)}{\\partial \\beta_{m,e}}=\n",
+    "p_v\\left(c\\right) \\frac{n_e}{1 - t_e} \\frac{\\left[U_e\\left(v, c\\right) - t_e\\right]\\left[1 - U_e\\left(v, c\\right)\\right]}{U_e\\left(v, c\\right)} b\\left(v\\right)_m.\n",
     "$$"
    ]
   },
@@ -212,6 +226,7 @@
    "metadata": {},
    "source": [
     "#### Calculating $\\frac{\\partial p_v\\left(c\\right)}{\\partial a_{\\rm{wt},e}}$\n",
+    "**AM HERE**\n",
     "The only difference from above is the sign, so:\n",
     "$$\n",
     "\\frac{\\partial p_v\\left(c\\right)}{\\partial a_{\\rm{wt},e}} = -p_v\\left(c\\right) \\left[1 - U_e\\left(v, c\\right)\\right].\n",
@@ -355,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
