calculate `dL/da` for new generalized Hill curves

--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -149,7 +149,7 @@
     "\\frac{\\partial L}{\\partial \\beta_{m,e}} =\n",
     "\\sum_{v,c}\n",
     "\\frac{r_v\\left(c\\right)}{h_{\\delta}\\left(r_v\\left(c\\right)\\right) + \\delta}\n",
-    "p_v\\left(c\\right) \\left[1 - U_e\\left(v, c\\right)\\right] b\\left(v\\right)_m\n",
+    "p_v\\left(c\\right) \\frac{n_e}{1 - t_e} \\frac{\\left[U_e\\left(v, c\\right) - t_e\\right]\\left[1 - U_e\\left(v, c\\right)\\right]}{U_e\\left(v, c\\right)} b\\left(v\\right)_m\n",
     "$$\n",
     "\n",
     "$$\n",
@@ -215,7 +215,8 @@
     "\n",
     "Putting it all together, we have:\n",
     "$$\n",
-    "\\frac{\\partial p_v\\left(c\\right)}{\\partial \\beta_{m,e}}=\n",
+    "\\frac{\\partial p_v\\left(c\\right)}{\\partial \\beta_{m,e}}\n",
+    "=\n",
     "p_v\\left(c\\right) \\frac{n_e}{1 - t_e} \\frac{\\left[U_e\\left(v, c\\right) - t_e\\right]\\left[1 - U_e\\left(v, c\\right)\\right]}{U_e\\left(v, c\\right)} b\\left(v\\right)_m.\n",
     "$$"
    ]
@@ -226,10 +227,12 @@
    "metadata": {},
    "source": [
     "#### Calculating $\\frac{\\partial p_v\\left(c\\right)}{\\partial a_{\\rm{wt},e}}$\n",
-    "**AM HERE**\n",
+    "\n",
     "The only difference from above is the sign, so:\n",
     "$$\n",
-    "\\frac{\\partial p_v\\left(c\\right)}{\\partial a_{\\rm{wt},e}} = -p_v\\left(c\\right) \\left[1 - U_e\\left(v, c\\right)\\right].\n",
+    "\\frac{\\partial p_v\\left(c\\right)}{\\partial a_{\\rm{wt},e}}\n",
+    "=\n",
+    "-p_v\\left(c\\right) \\frac{n_e}{1 - t_e} \\frac{\\left[U_e\\left(v, c\\right) - t_e\\right]\\left[1 - U_e\\left(v, c\\right)\\right]}{U_e\\left(v, c\\right)}.\n",
     "$$"
    ]
   },
